@@ -1,3 +1,9 @@
+2005-11-21  Tim-Philipp Müller  <tim at centricular dot net>
+
+	* gst/gstmessage.c:
+	  Improve docs for DURATION message (usage of duration parameter)
+	  (#320113)
+
 2005-11-20  Wim Taymans  <wim@fluendo.com>
 
 	* check/Makefile.am:
